[package]
name = "tuple_for_each"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Provides macros and methods to iterate over the fields of a tuple struct"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/tuple_for_each"
documentation = "https://docs.rs/tuple_for_each"
keywords = ["arceos", "tuple", "macro", "iterator"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
